# TWRay

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  bvh.h  camera.cpp  camera.h  cmake_install.cmake  constant.h  error.cpp  film.cpp  film.h  filter.cpp  filter.h  floatfile.cpp  floatfile.h  geometry.h  image.ppm  integrator.cpp  interaction.cpp  interaction.h  light.cpp  light.h  lightdistrib.cpp  logging.h  lowdiscrepancy.h  main.cc  material.cpp  material.h  microfacet.cpp  parallel.cpp  parallel.h  paramset.cpp  paramset.h  pbrt.h  primitive.cpp  primitive.h  progressreporter.h  reflection.cpp  (+16 more)
.VSCodeCounter/2022-12-24_12-16-50/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-25_22-42-21/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2022-12-26_10-47-16/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
RayTracing/: image.ppm
RayTracing/Scripts/: a.out  aabb.h  aabb_backup.h  aarect.h  box.h  bvh.h  camera.h  color.h  constant_medium.h  cylinder.h  geometry.h  hittable.h  hittable_list.h  image.ppm  interaction.h  main  main.cc  material.h  memory.h  moving_sphere.h  onb.h  paramset.h  pbrt.h  pdf.h  perlin.h  primitive.h  quaternion.h  ray.h  rtweekend.h  sampling.h  shape.h  sphere.h  stringprint.h  texture.h  transform.h  vec3.h  vec3pre.h
RayTracing/Scripts/main.dSYM/Contents/Resources/DWARF/: main
RayTracing/Scripts/shapes/: sphere.h
cameras/: perspective.cpp  perspective.h
core/: aarect.h  bssrdf.h  bvh.cpp  cmake_install.cmake  efloat.cpp  efloat.h  error.h  fileutil.cpp  fileutil.h  floatfile.cpp  geometry.cpp  header_test.cpp  header_test.h  header_test2.cpp  header_test2.h  imageio.cpp  light.h  lightdistrib.h  lowdiscrepancy.cpp  main.cc  material.cpp  medium.cpp  medium.h  memory.cpp  microfacet.h  paramset.cpp  pbrt.h  pdf.h  rng.h  sampler.cpp  sampling.h  scene.cpp  stats.cpp  texture.cpp
examples/: CB12_26.exr
filters/: box.cpp  box.h
integrators/: bdpt.cpp  bdpt.h  directlighting.cpp  directlighting.h  path.cpp  path.h  volpath.cpp  volpath.h
lights/: diffuse.cpp  diffuse.h  distant.cpp  distant.h  point.cpp  point.h  spot.cpp  spot.h
materials/: disney.cpp  disney.h  glass.cpp  glass.h  matte.cpp  matte.h  subsurface.cpp  subsurface.h
media/: homogeneous.cpp  homogeneous.h
ply/: rose.ply
ply/splashwater/: glass.ply
ply/wineglass/: glass.ply  liquid.ply  wineplane.ply
samplers/: random.cpp  random.h  zerotwosequence.cpp  zerotwosequence.h
scene/: sample_scene.blend1
shapes/: disk.cpp  disk.h  heightfield.cpp  heightfield.h  plymesh.cpp  plymesh.h  sphere.cpp  sphere.h  triangle.cpp  triangle.h
src/cameras/: perspective.cpp  perspective.h
src/core/: box.h  bssrdf.cpp  camera.cpp  error.cpp  film.cpp  hittable.h  imageio.cpp  imageio.h  integrator.cpp  integrator.h  interpolation.cpp  interpolation.h  main.cc  memory.h  mipmap.h  onb.h  parallel.cpp  parallel.h  paramset.cpp  paramset.h  pbrt.h  primitive.cpp  progressreporter.cpp  quaternion.cpp  quaternion.h  sampling.cpp  scene.h  shape.h  sobolmatrices.cpp  sobolmatrices.h  spectrum.cpp  spectrum.h  stats.cpp  stats.h  stringprint.h  texture.h  transform.h  twray.cpp  twray.h
src/ext/: rply.h  targa.cpp  targa.h
src/filters/: box.h
src/integrators/: bdpt.cpp  bdpt.h  directlighting.cpp  path.cpp  sppm.cpp  sppm.h  volpath.h
src/lights/: distant.h  infinite.cpp  infinite.h  point.cpp  spot.cpp  spot.h
src/materials/: disney.h  matte.h  subsurface.cpp  uber.cpp  uber.h
src/media/: homogeneous.h
src/optix/: optix.cpp  optix.h
src/qt/: qt.cpp  qt.h
src/samplers/: halton.cpp  halton.h  random.cpp  zerotwosequence.h
src/shapes/: sphere.h
src/textures/: checkerboard.cpp  checkerboard.h
test.dSYM/Contents/Resources/DWARF/: test
textures/: constant.cpp  constant.h
